# debian-package-examples

./: README.md
heartbeat-service/: .gitignore  README.md  build.sh  build_executable.py  heartbeat.service  pyproject.toml
heartbeat-service/debian/: changelog  control  heartbeat.service  install  postinst  prerm  rules
heartbeat-service/src/heartbeat_service/: __main__.py  service.py
python-package/: Makefile  README.md  pyproject.toml
python-package/debian/: changelog  control  py3dist-overrides  rules
python-package/heartbeat_app/: __init__.py  cli.py  config.py
shutdown-service/: Makefile  README.md  main.py  pyproject.toml  settings.template.yaml
shutdown-service/debian/: changelog  control  install  postinst  preinst  prerm  rules  shutdown-service.service
shutdown-service/shutdown_service/: __init__.py  config.py  shutdown_service.py
